--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -17,6 +17,7 @@
 @import './components/input.css';
 @import './components/buttons.css';
 @import './components/model-selector.css';
+@import './components/settings.css';
 
 /* Utilities */
 @import './utils/markdown.css';
